--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "npm 包发布、管理等",
   "author": "Jabo <hjbno.1@qq.com>",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
+  "main":"dist/npm-publish.min.js",
   "dependencies": {
     "vue": "^2.5.2"
   },
