--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-publish",
+  "name": "npm-my-publish",
   "version": "1.0.0",
   "description": "npm 包发布、管理等",
   "author": "Jabo <hjbno.1@qq.com>",
@@ -9,7 +9,7 @@
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "main":"dist/npm-publish.min.js",
+  "main":"dist/npm-my-publish.min.js",
   "dependencies": {
     "vue": "^2.5.2"
   },
