--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-my-publish",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "npm 包发布、管理等",
   "author": "Jabo <hjbno.1@qq.com>",
   "private": false,
@@ -9,8 +9,9 @@
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "main":"dist/npm-my-publish.min.js",
+  "main": "dist/npm-my-publish.min.js",
   "dependencies": {
+    "npm-my-publish": "^1.0.2",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "npm-my-publish": "^1.0.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
